--- a/src/Component/Common/Header/header.css
+++ b/src/Component/Common/Header/header.css
@@ -1,6 +1,13 @@
-
+.headerr{
+    background-color: rgba(255, 255, 255, 0.2);
+}
+.headerr.active{
+    background-color: rgba(34, 34, 34, 0.9);
+    /* scroll-behavior: smooth; */
+    color: #fff;
+}
 #nav{
-    background-color: #3b536b;
+    /* background-color: #3b536b; */
     color: #fff;
 }
 #nav ul li a:hover{
