--- a/src/Component/Form/form.css
+++ b/src/Component/Form/form.css
@@ -7,6 +7,7 @@
     margin-top: -85px;
     padding: 50px;
     box-shadow: 0px 10px 20px 0px rgba(153, 153, 153, 0.1);
+    border-radius: 10px;
 }
 
 .form .form-classone{
@@ -18,5 +19,13 @@
     justify-content: space-between;
     /* align-items: center; */
     flex-direction: column;
-    gap: 15px
+    gap: 15px;
+    max-height: 30vh;
+}
+
+.form h2{
+    font-family: serif;
+}
+.form p{
+    font-family: serif;
 }
